--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">witsarut Portfolio</h1>
-                <h3 class="mb-5"><em> วิศรุต สระทองพร้อม เเละ portfolio ของเขา</em></h3>
+                <h3 class="mb-5"><em> วิศรุต สระทองพร้อม and portfolio ของเขา</em></h3>
             
             </div>
         </header>
